<resources>
    <string name="app_name">Teacherly</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_tutor">Tutor Title</string>
    <string name="cost_of_tutor">35$/hr</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_assignments">My Assignments</string>
    <string name="my_address">My Address</string>
    <string name="session_bookings">Session Bookings</string>
    <string name="chat_with_us">Chat with us</string>
    <string name="logout">Logout</string>
    <string name="list_of_tutors">List of Tutors</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_past_sessions">PastSessionsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="past_sessions_name">Past Session Bookings</string>
</resources>