<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ca.dal.teacherly.ui.Home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="ca.dal.teacherly.ui.Subjects.SubjectsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_subjects" >
        <action
            android:id="@+id/action_navigation_dashboard_to_searchByLocation"
            app:destination="@id/searchByLocation" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="ca.dal.teacherly.ui.Menu.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_menu" />
    <fragment
        android:id="@+id/searchByLocation"
        android:name="ca.dal.teacherly.SearchByLocation"
        android:label="fragment_search_by_location"
        tools:layout="@layout/fragment_search_by_location" />
</navigation>